--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             padding: 20px;
         }
         img {<img src="images/foto-maura.jpg" alt="Foto Maura" width="200">
-            width: 150px;
+            width: 200px;
             border-radius: 50%;
             margin-top: 20px;
         }
@@ -55,7 +55,7 @@
         <img src="foto_maura.jpg" alt="Foto Maura">
         <div class="content">
             <h2>Tentang Saya</h2>
-            <p>Merupakan seorang mahasiswa semester 6 yang sedang menempuh pendidikan dalam program studi Manajemen Informasi Kesehatan Sekolah Vokasi Universitas Gadjah Mada...</p>
+            <p>Merupakan seorang mahasiswa semester 6 yang sedang menempuh pendidikan dalam program studi Manajemen Informasi Kesehatan Sekolah Vokasi Universitas Gadjah Mada. Saya telah memiliki pengalaman kerja di bidang rekam medis dan informasi kesehatan melalui kegiatan PKL yang telah saya laksanakan di beberapa instansi. Selain itu saya juga telah mengembangkan kemampuan dalam pengodean penyakit, analisis data kesehatan, perancangan desain grafis melalui proyek akhir yang dilaksanakan setiap semester</p>
         </div>
     </div>
 </body>
@@ -111,6 +111,10 @@
         <li>Pelantikan Calon Anggota Unit Fotografi 31 - Ketua Pelaksana</li>
         <li>Pameran Fotografi Porseni - Staff Tangkai Seni Fotografi</li>
         <li><a href="https://drive.google.com/file/d/15lX0rcCfKsiR3r4XytsbyohHm5zfnFHR/view?usp=drivesdk">Pameran Pra-Pelantikan CUFO 31 - Sub-Koordinator Divisi Pameran</a></li>
+        <li>Staff Divisi PSDM Unit Fotografi
+	<li><a href="https://drive.google.com/file/d/15yX1e3Ai5Y3D33j8GhIAjCATPTq-D0Il/view?usp=drivesdk">International Guest Lecture on Health Information Management 2023 - Staff Acara
+	<li><a href="https://drive.google.com/file/d/15oLtX8xfYVapTLecECKPoBUzs-J9XOUz/view?usp=drivesdk">Kuliah Umum Manajemen Informasi Kesehatan 2023 - Staff Acara
+	<li>Pameran Pra-Pelantikan CUFO 30 - Staff Divisi Pameran 
     </ul>
 </body>
 </html>
